- 47: fix in rsyntaxtextarea [David Mancini]
- 48: remove BlueJ save file [Fred FABER]
- 49: added interactive project feature <Ronny OSWEILER>
- 50: bug when UML class is out of screen [Thomas MARITS]
- 51: fixed a bug when a new class is being added with the same name than
      a previously deleted file [Ronny OSWEILER]
- 52: fixed a bug when changing the package name in a file [Robert FISCH]

Version 0.27 (06/12/2012)
- 01: editor: update of RSyntaxTextArea (Revision 313) [Robert FUTRELL]
- 02: editor: update of RSyntaxTextArea & Co (Revision 333) [Robert FUTRELL]
- 02: editor: update of RCommen & Co (Revision 153) [Robert FUTRELL]
- 03: Removed a Main.java from the default package in RSTALanguageSupport [Jens GETREU]
- 04: Allowing    "public static void main(String args[])" 
      as well as  "public static void main(String[] args)" to run [Jens GETREU]
- 05: F6 and F8 are working now [Fred FABER]
- 06: Automatic implementation of setter/getter when adding fields [Fred FABER]
- 06: Saving some more settings to the INI file [Robert FISCH]
- 07: Getter/setter generator checkbox state is unchecked by default [FF,GE,LB,RF]
- 08: Reset position of window if outside of the visible area [11TG3 2011/2012]
- 09: editor: update of RSyntaxTextArea & Co (Revision 337) [Robert FUTRELL]
- 10: displaying bug: everything is italic [Fred FABER]
- 11: updated the bootloader to find JDK more reliably unter Windows 7 [Robert FISCH]
- 11: fixing the displaying bug (only Windows 7!) [Fred FABER]
- 11: replaced different "foreach" loops [Robert FISCH]
- 12: aggregations for arrays are now recognized for both notations [Fred FABER]
- 13: double clicking save files now also works for JWS [David MANCINI]
- 14: small fix in the NetBeans save file [Robert FISCH]
- 15: code editor didn't load the correct font size un startup [Fred FABER]
- 15: editor: update of RSyntaxTextArea & Co (Revision 344) [Robert FUTRELL]
- 15: editor: update of RCommen & Co (Revision 163) [Robert FUTRELL]